--- a/part1_face_boundary_detection.ipynb
+++ b/part1_face_boundary_detection.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sepehrsardooeinasab/Face_Boundry_and_Facial_Landmark_Detection/blob/master/part1_face_boundary_detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "275eaf8b"
       },
       "source": [
@@ -944,7 +954,8 @@
     "colab": {
       "collapsed_sections": [],
       "name": "part1_face_boundary_detection.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
