--- a/part1_face_boundary_detection.ipynb
+++ b/part1_face_boundary_detection.ipynb
@@ -888,7 +888,7 @@
         "    ss_results = ss.process()\n",
         "    resized_image_copy = resized_image.copy() / 255.0\n",
         "    \n",
-        "    bb = []\n",
+        "    bbs = []\n",
         "    for i, result in enumerate(ss_results):\n",
         "        if i < 500:\n",
         "            x, y, w, h = result\n",
@@ -897,22 +897,22 @@
         "            resized = np.expand_dims(resized, axis=0)\n",
         "            predicted = model.predict(resized)\n",
         "            if (predicted[0] > 0.5):\n",
-        "                bb.append([x, y, w, h])\n",
+        "                bbs.append([x, y, w, h])\n",
         "\n",
-        "    best_bb = []\n",
+        "    best_bbs = []\n",
         "    flag = 0\n",
-        "    for i, box1 in enumerate(bb):\n",
+        "    for i, box1 in enumerate(bbs):\n",
         "        x1, y1, w1, h1 = box1\n",
-        "        for box2 in bb[i+1:]:\n",
+        "        for box2 in bbs[i+1:]:\n",
         "            x2, y2, w2, h2 = box2\n",
         "            if calculate_iou({\"x1\":x1, \"x2\":x1+w1, \"y1\":y1, \"y2\":y1+h1},\n",
         "                             {\"x1\":x2, \"x2\":x2+w2, \"y1\":y2, \"y2\":y2+h2}) > 0.3:\n",
         "                flag = 1\n",
         "        if flag == 0:\n",
-        "            best_bb.append(box1)\n",
+        "            best_bbs.append(box1)\n",
         "        flag = 0\n",
         "\n",
-        "    for box in best_bb:\n",
+        "    for box in best_bbs:\n",
         "        x, y, w, h = box\n",
         "        cv2.rectangle(resized_image_copy, (x,y), (x+w,y+h), (0,0, 1), 1, cv2.LINE_AA)\n",
         "    \n",
@@ -953,7 +953,6 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "name": "part1_face_boundary_detection.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
