--- a/part1_face_boundary_detection.ipynb
+++ b/part1_face_boundary_detection.ipynb
@@ -549,7 +549,7 @@
       },
       "outputs": [],
       "source": [
-        "optimizer = tf.keras.optimizers.Adam(learning_rate=0.0001)\n",
+        "optimizer = tf.keras.optimizers.Adam(learning_rate=1e-4)\n",
         "loss_fn = tf.keras.losses.BinaryCrossentropy()\n",
         "train_acc_metric = tf.keras.metrics.BinaryAccuracy()\n",
         "val_acc_metric = tf.keras.metrics.BinaryAccuracy()"
@@ -896,7 +896,7 @@
         "            resized = cv2.resize(timage, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT))\n",
         "            resized = np.expand_dims(resized, axis=0)\n",
         "            predicted = model.predict(resized)\n",
-        "            if (predicted[0] > 0.5):\n",
+        "            if (predicted[0] > 0.7):\n",
         "                bbs.append([x, y, w, h])\n",
         "\n",
         "    best_bbs = []\n",
