--- a/part1_face_boundary_detection.ipynb
+++ b/part1_face_boundary_detection.ipynb
@@ -137,21 +137,16 @@
         "import os\n",
         "import re\n",
         "import cv2\n",
-        "import time\n",
-        "import random\n",
         "import logging\n",
         "import numpy as np\n",
         "import seaborn as sns\n",
         "import tensorflow as tf\n",
         "from tqdm.notebook import tqdm\n",
         "import matplotlib.pyplot as plt\n",
+        "from tensorflow.keras.models import Model\n",
         "from keras.applications.vgg16 import VGG16\n",
-        "from tensorflow.keras.optimizers import Adam\n",
         "from tensorflow.keras.models import load_model\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from tensorflow.keras.models import Sequential, Model\n",
-        "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
-        "from tensorflow.keras.layers import Input, Flatten, Dense, Conv2D, MaxPooling2D, Dropout"
+        "from tensorflow.keras.layers import Dense, Dropout"
       ],
       "id": "30898b31"
     },
@@ -376,14 +371,13 @@
         "    images = []\n",
         "    labels = []\n",
         "    \n",
-        "    while pointer<=len(lines):\n",
+        "    while pointer <= len(lines):\n",
         "        if start_index <= image_counter < end_index:\n",
         "            path_image = lines[pointer].strip()\n",
         "            image = cv2.imread(BASE_PATH + \"WiderSelected/train/\" + path_image)\n",
         "            current_heigth, current_width = image.shape[0], image.shape[1]\n",
         "            resized_image = cv2.resize(image, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT), (NEW_WIDTH_HEIGHT/current_width),\n",
         "                                       (NEW_WIDTH_HEIGHT/current_heigth), interpolation=cv2.INTER_CUBIC)\n",
-        "            resized_image_copy = resized_image.copy()\n",
         "            pointer += 1\n",
         "            num_faces = int(lines[pointer])\n",
         "            pointer += 1\n",
@@ -395,7 +389,7 @@
         "                x, y, w, h = (int(x * NEW_WIDTH_HEIGHT / current_width), int(y * NEW_WIDTH_HEIGHT / current_heigth),\n",
         "                              int(w * NEW_WIDTH_HEIGHT / current_width), int(h * NEW_WIDTH_HEIGHT / current_heigth))\n",
         "                resized_bbs.append({\"x1\":x, \"x2\":x+w, \"y1\":y, \"y2\":y+h})\n",
-        "                timage = resized_image_copy[y:y+h, x:x+w]\n",
+        "                timage = resized_image[y:y+h, x:x+w]\n",
         "                resized = cv2.resize(timage, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT))\n",
         "                images.append(resized)\n",
         "                labels.append(1)\n",
@@ -412,7 +406,7 @@
         "                        x, y, w, h = ss_result\n",
         "                        iou = calculate_iou(border, {\"x1\":x,\"x2\":x+w,\"y1\":y,\"y2\":y+h})\n",
         "                        if iou < 0.4:\n",
-        "                            timage = resized_image_copy[y:y+h, x:x+w]\n",
+        "                            timage = resized_image[y:y+h, x:x+w]\n",
         "                            resized = cv2.resize(timage, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT))\n",
         "                            images.append(resized)\n",
         "                            labels.append(0)\n",
@@ -719,15 +713,15 @@
         "    for nth_part_data in range(number_parts_data):\n",
         "        pbar_part_data.set_description_str(desc=\"Part {} Data\".format(nth_part_data))\n",
         "        X_train, Y_train = make_set(RANGE_TRAIN[0]+(GENERATOR_SIZE*nth_part_data),\n",
-        "                                                 RANGE_TRAIN[0]+(GENERATOR_SIZE*(nth_part_data+1)))\n",
+        "                                    RANGE_TRAIN[0]+(GENERATOR_SIZE*(nth_part_data+1)))\n",
         "        X_train = X_train / 255.0\n",
         "        number_mini_batches = int(len(X_train)/MINI_BATCH_SIZE)\n",
         "        pbar_mini_batch.reset(number_mini_batches)\n",
         "        \n",
         "        for mini_batch_number in range(number_mini_batches):\n",
         "            pbar_mini_batch.set_description_str(desc=\"Mini Batch {}\".format(mini_batch_number))\n",
-        "            X = X_train[MINI_BATCH_SIZE*mini_batch_number:MINI_BATCH_SIZE*(mini_batch_number+1), :, :, :]\n",
-        "            Y = Y_train[MINI_BATCH_SIZE*mini_batch_number:MINI_BATCH_SIZE*(mini_batch_number+1)]\n",
+        "            X = X_train[MINI_BATCH_SIZE*mini_batch_number : MINI_BATCH_SIZE*(mini_batch_number+1), :, :, :]\n",
+        "            Y = Y_train[MINI_BATCH_SIZE*mini_batch_number : MINI_BATCH_SIZE*(mini_batch_number+1)]\n",
         "            Y.resize((Y.shape[0], 1))\n",
         "        \n",
         "            with tf.GradientTape() as tape:\n",
@@ -760,7 +754,7 @@
         "    else:\n",
         "        print(\"\")\n",
         "        \n",
-        "    history.append({'loss':loss_value, 'acc':train_acc, 'val_loss':loss_value_val , 'val_acc':val_acc})\n",
+        "    history.append({'loss':loss_value, 'acc':train_acc, 'val_loss':loss_value_val, 'val_acc':val_acc})\n",
         "    pbar_epoch.update()"
       ],
       "id": "6438bb03"
@@ -914,7 +908,7 @@
         "\n",
         "    for box in best_bbs:\n",
         "        x, y, w, h = box\n",
-        "        cv2.rectangle(resized_image_copy, (x,y), (x+w,y+h), (0,0, 1), 1, cv2.LINE_AA)\n",
+        "        cv2.rectangle(resized_image_copy, (x,y), (x+w,y+h), (0,0,1), 1, cv2.LINE_AA)\n",
         "    \n",
         "    plt.imshow(resized_image_copy[:,:,::-1])\n",
         "    plt.show()"
