--- a/part2_facial_landmark_detection.ipynb
+++ b/part2_facial_landmark_detection.ipynb
@@ -32,13 +32,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "e7VYEtKA52rD",
-        "outputId": "82fb3e77-3554-4bd2-b487-8d0de49d8cbb"
+        "outputId": "6def603c-b69c-49d4-ac51-c90519a2ee58"
       },
       "outputs": [
         {
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "543420e7"
       },
@@ -93,20 +93,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OiaJyjRE6Jnp",
-        "outputId": "7c10678c-057c-4382-ce6d-8e74b6653296"
+        "outputId": "f06dc9fd-cd75-46ed-c14a-33559cf5721d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "replace /content/drive/MyDrive/CV2022/WiderSelected/annotations.txt? [y]es, [n]o, [A]ll, [N]one, [r]ename: N\n"
+            "replace /content/drive/MyDrive/CV2022/WiderSelected/annotations.txt? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
           ]
         }
       ],
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "30898b31"
       },
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -244,11 +244,10 @@
         "    images = []\n",
         "    labels = []\n",
         "    \n",
-        "    while pointer<=len(lines):\n",
+        "    while pointer <= len(lines):\n",
         "        if start_index <= image_counter < end_index:\n",
         "            path_image = lines[pointer].strip()\n",
         "            image = cv2.imread(BASE_PATH + \"WiderSelected/train/\" + path_image)\n",
-        "            image_copy = image.copy()\n",
         "            current_heigth, current_width = image.shape[0], image.shape[1]\n",
         "            pointer += 1\n",
         "            num_faces = int(lines[pointer])\n",
@@ -257,7 +256,7 @@
         "            for num_face in range(num_faces):\n",
         "                face_bbs, landmarks = lines[pointer].split()[:4], lines[pointer].split()[4:]\n",
         "                x, y, w, h = int(face_bbs[0]), int(face_bbs[1]), int(face_bbs[2]), int(face_bbs[3])\n",
-        "                timage = image_copy[y:y+h, x:x+w]\n",
+        "                timage = image[y:y+h, x:x+w]\n",
         "                resized = cv2.resize(timage, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT))\n",
         "                images.append(resized)\n",
         "\n",
@@ -388,7 +387,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Make Train and val sets, also normalize them"
+        "## Make Train and val sets"
       ],
       "metadata": {
         "id": "HNz7r4TfpNEn"
@@ -539,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "w2TziRSbv6Ly"
       },
@@ -551,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "7bb195b7"
       },
@@ -569,7 +568,6 @@
         "        if image_index == image_counter:\n",
         "            path_image = lines[pointer].strip()\n",
         "            image = cv2.imread(BASE_PATH + \"WiderSelected/train/\" + path_image)\n",
-        "            image_copy = image.copy()\n",
         "            current_heigth, current_width = image.shape[0], image.shape[1]\n",
         "            resized_image = cv2.resize(image, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT), (NEW_WIDTH_HEIGHT/current_width),\n",
         "                                       (NEW_WIDTH_HEIGHT/current_heigth), interpolation=cv2.INTER_CUBIC)\n",
@@ -580,7 +578,7 @@
         "            for num_face in range(num_faces):\n",
         "                face_bbs = lines[pointer].split()[:4]\n",
         "                x, y, w, h = int(face_bbs[0]), int(face_bbs[1]), int(face_bbs[2]), int(face_bbs[3])\n",
-        "                timage = image_copy[y:y+h, x:x+w]\n",
+        "                timage = image[y:y+h, x:x+w]\n",
         "                resized = cv2.resize(timage, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT))\n",
         "                images.append(resized)\n",
         "                pointer += 1                \n",
@@ -604,7 +602,7 @@
         "\n",
         "        for landmark in landmarks[0]:\n",
         "            cv2.circle(images[0], (landmark[0], landmark[1]),\n",
-        "                       radius=2, color=(0, 255, 0), thickness=-1)\n",
+        "                       radius=2, color=(0,255,0), thickness=-1)\n",
         "        \n",
         "        plt.figure(figsize=(15, 7))\n",
         "        plt.imshow(images[0][:,:,::-1])\n",
@@ -616,7 +614,7 @@
         "        for e, image in enumerate(images):\n",
         "            for landmark in landmarks[e]:\n",
         "                cv2.circle(image, (landmark[0], landmark[1]),\n",
-        "                           radius=2, color=(0, 255, 0), thickness=-1)\n",
+        "                           radius=2, color=(0,255,0), thickness=-1)\n",
         "                \n",
         "        fig, subplots = plt.subplots(1, len(images), figsize=(15, 9))\n",
         "\n",
@@ -629,7 +627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "id": "b68dfe8c",
         "colab": {
@@ -683,7 +681,7 @@
         "outputId": "760a092e-914b-4d8f-b254-f7f34284ae01"
       },
       "id": "Zhmab3n-MAxu",
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
