--- a/part1_face_boundary_detection.ipynb
+++ b/part1_face_boundary_detection.ipynb
@@ -375,9 +375,8 @@
         "        if start_index <= image_counter < end_index:\n",
         "            path_image = lines[pointer].strip()\n",
         "            image = cv2.imread(BASE_PATH + \"WiderSelected/train/\" + path_image)\n",
-        "            current_heigth, current_width = image.shape[0], image.shape[1]\n",
-        "            resized_image = cv2.resize(image, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT), (NEW_WIDTH_HEIGHT/current_width),\n",
-        "                                       (NEW_WIDTH_HEIGHT/current_heigth), interpolation=cv2.INTER_CUBIC)\n",
+        "            current_height, current_width = image.shape[0], image.shape[1]\n",
+        "            resized_image = cv2.resize(image, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT))\n",
         "            pointer += 1\n",
         "            num_faces = int(lines[pointer])\n",
         "            pointer += 1\n",
@@ -386,8 +385,8 @@
         "            for num_face in range(num_faces):\n",
         "                face_bbs = lines[pointer].split()[:4]\n",
         "                x, y, w, h = int(face_bbs[0]), int(face_bbs[1]), int(face_bbs[2]), int(face_bbs[3])\n",
-        "                x, y, w, h = (int(x * NEW_WIDTH_HEIGHT / current_width), int(y * NEW_WIDTH_HEIGHT / current_heigth),\n",
-        "                              int(w * NEW_WIDTH_HEIGHT / current_width), int(h * NEW_WIDTH_HEIGHT / current_heigth))\n",
+        "                x, y, w, h = (int(x * NEW_WIDTH_HEIGHT / current_width), int(y * NEW_WIDTH_HEIGHT / current_height),\n",
+        "                              int(w * NEW_WIDTH_HEIGHT / current_width), int(h * NEW_WIDTH_HEIGHT / current_height))\n",
         "                resized_bbs.append({\"x1\":x, \"x2\":x+w, \"y1\":y, \"y2\":y+h})\n",
         "                timage = resized_image[y:y+h, x:x+w]\n",
         "                resized = cv2.resize(timage, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT))\n",
@@ -863,9 +862,7 @@
         "        if image_index==image_counter:\n",
         "            path_image = lines[pointer].strip()\n",
         "            image = cv2.imread(BASE_PATH + \"WiderSelected/train/\" + path_image)\n",
-        "            current_heigth, current_width = image.shape[0], image.shape[1]\n",
-        "            resized_image = cv2.resize(image, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT), (NEW_WIDTH_HEIGHT/current_width),\n",
-        "                                       (NEW_WIDTH_HEIGHT/current_heigth), interpolation=cv2.INTER_CUBIC)  \n",
+        "            resized_image = cv2.resize(image, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT))  \n",
         "        elif image_counter > image_index:\n",
         "            break\n",
         "        else:\n",
