--- a/part2_facial_landmark_detection.ipynb
+++ b/part2_facial_landmark_detection.ipynb
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "543420e7"
       },
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -248,7 +248,6 @@
         "        if start_index <= image_counter < end_index:\n",
         "            path_image = lines[pointer].strip()\n",
         "            image = cv2.imread(BASE_PATH + \"WiderSelected/train/\" + path_image)\n",
-        "            current_heigth, current_width = image.shape[0], image.shape[1]\n",
         "            pointer += 1\n",
         "            num_faces = int(lines[pointer])\n",
         "            pointer += 1\n",
@@ -568,9 +567,7 @@
         "        if image_index == image_counter:\n",
         "            path_image = lines[pointer].strip()\n",
         "            image = cv2.imread(BASE_PATH + \"WiderSelected/train/\" + path_image)\n",
-        "            current_heigth, current_width = image.shape[0], image.shape[1]\n",
-        "            resized_image = cv2.resize(image, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT), (NEW_WIDTH_HEIGHT/current_width),\n",
-        "                                       (NEW_WIDTH_HEIGHT/current_heigth), interpolation=cv2.INTER_CUBIC)\n",
+        "            resized_image = cv2.resize(image, (NEW_WIDTH_HEIGHT, NEW_WIDTH_HEIGHT))\n",
         "            pointer += 1\n",
         "            num_faces = int(lines[pointer])\n",
         "            pointer += 1\n",
