--- a/part3_face_boundary_and_facial_landmark_detection.ipynb
+++ b/part3_face_boundary_and_facial_landmark_detection.ipynb
@@ -419,7 +419,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<code>show_all = False</code> to see only original picture before and after face boundy and facial landmark detection\n"
+        "<code>show_all = False</code> to see only the original picture before and after face boundy and facial landmark detection\n"
       ],
       "metadata": {
         "id": "y-Toxte6D3ma"
