--- a/part3_face_boundary_and_facial_landmark_detection.ipynb
+++ b/part3_face_boundary_and_facial_landmark_detection.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Facial Boundary and Facial Landmark Detection"
+        "# Facial boundary and facial landmark detection"
       ],
       "metadata": {
         "id": "heVzHG4MH7WU"
@@ -44,7 +44,7 @@
         "outputId": "923c8761-38ae-4b7e-d98e-da9e2647aafa"
       },
       "id": "hril8KXJHz26",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,7 +79,7 @@
         "id": "MHiAHL5VHIER"
       },
       "id": "MHiAHL5VHIER",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
         "id": "f5lnU9ZrIhsH"
       },
       "id": "f5lnU9ZrIhsH",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
         "outputId": "cb4f3d58-c3b0-4c25-86dd-ff0c52197b21"
       },
       "id": "HOZbiV7rIZGi",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +177,7 @@
         "outputId": "4d7b284f-872f-49d2-f460-561cb499715a"
       },
       "id": "8mG6TT2DLuOa",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
         "id": "yP39L0BGQsFG"
       },
       "id": "yP39L0BGQsFG",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
         "id": "LFQ_momeLxW_"
       },
       "id": "LFQ_momeLxW_",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -271,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "fd3bc83b"
       },
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "26e80cdf",
       "metadata": {
         "id": "26e80cdf",
